[package]
name = "lrtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lrtool"

[dependencies]
open = "2.1"
reqwest = "0.11.10"
rocket = { version = "0.5.0-rc.1", features = ["tls"]}
rocket_oauth2 = "0.5.0-rc.1"
serde = "1.0.136"
serde_json = "1.0.79"
